tests/testcases/errors/BCE0095-1.boo
"""
BCE0095-1.boo(4,6): BCE0095: No such label 'label'.
"""
goto label

